# rabbit

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  rabbit.py  rabbit.yaml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
data/: example.yaml
rabbit/: app.py  cli.py  clickObject.py  command.py  commands.py  config.py  display.py  flags.py  group.py  rabbit.py  settings.py
rabbit/models/: CommandCollection.py  app.py  command.py  config.py
rabbit/tests/: test_app.py  test_cli.py  test_command.py  test_commands.py  test_display.py
tests/: test_app.py  test_commands.py  test_config.py  test_display.py  test_example.py  test_group.py  test_rabbit.py
tests/models/: test_app.py  test_command.py  test_config.py
