[metadata]
name = rabbit
author = Toby Harris
author-email = tobyharris93@gmail.com
summary = Command Line Hopper/Proxy
description-file = README.md
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    rabbit

[entry_points]
console_scripts =
    rabbit = rabbit.cli:main
    rab = rabbit.cli:main